# tinysqlbuilder

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: __init__.py  test_builder.py  test_ddl.py  test_sql.py
tinysqlbuilder/: builder.py  ddl.py  sql.py
