[tool.poetry]
name = "tinysqlbuilder"
version = "0.1.0"
description = ""
authors = ["Ko <koichirookamoto@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2"
dataclasses = { version = "0.8", python = "<3.7,>=3.6.2" }

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"
black = { version = "22.1.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
balanced_wrapping = true
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = 3.9

# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
